# biblioteca-comunitaria

./: .gitignore  README.md  estoque.db  pyproject.toml
biblioteca_comunitaria/: app.py  models.py  teste.py
