[tool.poetry]
name = "biblioteca-comunitaria"
version = "0.1.0"
description = ""
authors = ["Ramilton Lima <ramilton.silva.lima@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.0"
sqlalchemy = "^2.0.22"


[tool.poetry.group.dev.dependencies]
ignr = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
